Add tree view for virtual file indexes